# screencoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  constant.h  go.mod  go.sum  main.cpp  queue.h  singleton.cpp  singleton.h  task_pool.h  thread_safe.h  video.cpp  video_sdk.h
adaptive/: screencoder_adaptive.cpp  screencoder_adaptive.h
avcodec/: avcodec_datatype.h
bitstream/: sunshine_bitstream.h
capture/: capture_image.h  platform_common.cpp  platform_common.h
capture/windows/: d3d11_datatype.h  display_base.cpp  display_base.h  windows_helper.cpp  windows_helper.h
capture/windows/cpu/: cpu_cursor.h  display_ram.h
capture/windows/duplication/: duplication.cpp  duplication.h
capture/windows/gpu/: display_vram.cpp  display_vram.h  gpu_cursor.cpp  gpu_cursor.h  gpu_hw_device.cpp  gpu_hw_device.h
cmake/: CMakeLists.txt.mingw  CMakeLists.txt.msvc
config/: screencoder_config.cpp  screencoder_config.h  sunshine_config.cpp  sunshine_config.h
encode/: encoder_datatype.h  encoder_session.cpp  encoder_session.h  encoder_thread.cpp  encoder_thread.h
encode/encoder/: encoder_device.cpp  encoder_device.h
encode/encoder/d3d11/: encoder_d3d11_device.cpp  encoder_d3d11_device.h
encoder/: encoder.cpp  encoder.h  encoder_d3d11_device.cpp  encoder_d3d11_device.h  encoder_datatype.h  encoder_device.cpp  encoder_device.h  encoder_packet.cpp  encoder_packet.h  encoder_thread.cpp  encoder_thread.h
encoder/avcodec/: avcodec_datatype.h
encoder/bitstream/: encoder_validate.cpp  encoder_validate.h  sunshine_bitstream.cpp  sunshine_bitstream.h
encoder/d3d11/: encoder_d3d11_device.cpp  encoder_d3d11_device.h
examples/appsink/: main.cpp
examples/go_rtp/: main.go
examples/go_webrtc/: main.go  screencoder.go
examples/rtp/: main.cpp
platform/: common.cpp  common.h  platform_common.cpp  platform_common.h
platform/windows/: d3d11_datatype.h  display.cpp  display.h  display_base.cpp  display_base.h  display_ram.cpp  display_vram.cpp  display_vram.h  duplication.cpp  duplication.h  hw_device.cpp  hw_device.h  windows_helper.cpp  windows_helper.h
platform/windows/duplication/: duplication.cpp  duplication.h
platform/windows/gpu/: display_vram.cpp  gpu_cursor.cpp  gpu_cursor.h  gpu_hw_device.cpp  gpu_hw_device.h
rtp/: sunshine_rtp.cpp  sunshine_rtp.h
session/: generic_session.h  screencoder_session.cpp  screencoder_session.h  session.h  sunshine_session.cpp  sunshine_session.h
session/config/: screencoder_config.cpp  screencoder_config.h
singleton/: capturer.h
sink/: generic_sink.cpp  generic_sink.h
sink/appsink/: app_sink.cpp  app_sink.h  go_adapter.cpp
sink/appsink/go/: appsink.go  codec_parser.go  go_adapter.c  go_adapter.h  h264_parser.go
sink/appsink/go/h264/: h264_parser.go
sink/rtp/: screencoder_rtp.cpp  screencoder_rtp.h
util/: screencoder_util.h  sunshine_util.h
util/array/: screencoder_array.cpp  screencoder_array.h  sunshine_array.cpp  sunshine_array.h
util/avcodec/: avcodec_datatype.h  avcodec_wrapper.cpp  avcodec_wrapper.h
util/datatype/: screencoder_datatype.h  sunshine_datatype.h
util/error/: sunshine_error.cpp  sunshine_error.h
util/event/: screencoder_event.cpp  screencoder_event.h  sunshine_event.cpp  sunshine_event.h
util/log/: screencoder_log.cpp  screencoder_log.h  sunshine_log.cpp  sunshine_log.h
util/macro/: screencoder_macro.cpp  screencoder_macro.h  sunshine_macro.cpp  sunshine_macro.h
util/object/: screencoder_object.cpp  screencoder_object.h  sunshine_object.cpp  sunshine_object.h
util/operator/: sunshine_macro.cpp  sunshine_macro.h
util/queue/: screencoder_queue.cpp  screencoder_queue.h  sunshine_queue.cpp  sunshine_queue.h
